; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/socket/extr_ng_btsocket_l2cap.c_ng_btsocket_l2cap_listen.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/socket/extr_ng_btsocket_l2cap.c_ng_btsocket_l2cap_listen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.thread = type { i32 }
%struct.TYPE_3__ = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@ng_btsocket_l2cap_node = common dso_local global i32* null, align 8
@EADDRNOTAVAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ng_btsocket_l2cap_listen(%struct.socket* %0, i32 %1, %struct.thread* %2) #0 {
  %4 = alloca %struct.socket*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.thread*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.thread* %2, %struct.thread** %6, align 8
  %9 = load %struct.socket*, %struct.socket** %4, align 8
  %10 = call %struct.TYPE_3__* @so2l2cap_pcb(%struct.socket* %9)
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %7, align 8
  %11 = load %struct.socket*, %struct.socket** %4, align 8
  %12 = call i32 @SOCK_LOCK(%struct.socket* %11)
  %13 = load %struct.socket*, %struct.socket** %4, align 8
  %14 = call i32 @solisten_proto_check(%struct.socket* %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  br label %39

18:                                               ; preds = %3
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %20 = icmp eq %struct.TYPE_3__* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %18
  %22 = load i32, i32* @EINVAL, align 4
  store i32 %22, i32* %8, align 4
  br label %39

23:                                               ; preds = %18
  %24 = load i32*, i32** @ng_btsocket_l2cap_node, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %28

26:                                               ; preds = %23
  %27 = load i32, i32* @EINVAL, align 4
  store i32 %27, i32* %8, align 4
  br label %39

28:                                               ; preds = %23
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %28
  %34 = load i32, i32* @EADDRNOTAVAIL, align 4
  store i32 %34, i32* %8, align 4
  br label %39

35:                                               ; preds = %28
  %36 = load %struct.socket*, %struct.socket** %4, align 8
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @solisten_proto(%struct.socket* %36, i32 %37)
  br label %39

39:                                               ; preds = %35, %33, %26, %21, %17
  %40 = load %struct.socket*, %struct.socket** %4, align 8
  %41 = call i32 @SOCK_UNLOCK(%struct.socket* %40)
  %42 = load i32, i32* %8, align 4
  ret i32 %42
}

declare dso_local %struct.TYPE_3__* @so2l2cap_pcb(%struct.socket*) #1

declare dso_local i32 @SOCK_LOCK(%struct.socket*) #1

declare dso_local i32 @solisten_proto_check(%struct.socket*) #1

declare dso_local i32 @solisten_proto(%struct.socket*, i32) #1

declare dso_local i32 @SOCK_UNLOCK(%struct.socket*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
